Made links to social media and music sites

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -849,3 +849,10 @@ section #title .credits.right {
     display: none;
   }
 }
+
+#contents {
+    text-align: center;
+}
+#title {
+  text-align: center;
+}
