Just learned about section thingy in css

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -859,7 +859,7 @@ section #title .credits.right {
 #about {
   text-align: center;
 }
-#description {
+section #description {
   text-align: left;
 }
 #engineering-experience {
