--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -607,7 +607,7 @@ strong {
 .wrapper {
   max-width: 650px;
   margin: 0 auto;
-  position: relative;
+  position: center;
   padding: 0 20px;
 }
 
@@ -875,8 +875,9 @@ section #ibm-optimization-developer {
   height:120px;
   clear: both;
 }
-#music {
+section #music {
   text-align: center;
+  clear: both;
 }
 #music-description {
   text-align: left;
@@ -892,4 +893,15 @@ section #uoft {
   width:100%;
   height:120px;
   clear: both;
+}
+section #bandcamp {
+  background-color: none;
+  max-height: 150px;
+}
+.automargin {
+  max-width: 690px;
+  margin-left: auto; margin-right: auto;
+  position: relative;
+  height: auto;
+  /*padding: 0 20px;*/
 }
