--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -852,56 +852,175 @@ section #title .credits.right {
 
 #contents {
   text-align: center;
+  
 }
 #title {
   text-align: center;
 }
-#about {
-  text-align: center;
+#title-and-contents {
+
+  width:100%; 
+  height:100%;
+  position: relative;
+  top: 100px;
+  bottom: 100px;
 }
-section #description {
-  text-align: left;
+section #about {
+  text-align: center;
 }
 #engineering-experience {
   text-align: center;
 }
-section #ibm-build-engineer {
+#projects {
+  text-align: center;
+}
+
+#comixtrip {
+  width: 100%;
+  overflow: auto;
+  height: 250px;
+}
+#ibm-build-engineer {
+  overflow: auto;
   width:100%;
-  height:120px;
+  height:250px;
   float: left; 
 }
-section #ibm-optimization-developer {
+#ibm-optimization-developer {
+  overflow: auto;
   width:100%;
-  height:120px;
+  height:350px;
   clear: both;
 }
-section #music {
+#music {
   text-align: center;
   clear: both;
 }
 #music-description {
   text-align: left;
 }
-section #company-logo {
-  vertical-align:left;
-  float: left;
-}
-section #job-info {
-  vertical-align:middle;
-}
-section #uoft {
+
+#uoft {
   width:100%;
   height:120px;
   clear: both;
 }
-section #bandcamp {
+#bandcamp {
   background-color: none;
   max-height: 150px;
+  /* TODO fix size*/
 }
 .automargin {
-  max-width: 690px;
+  max-width: 800px;
+  max-height: auto;
   margin-left: auto; margin-right: auto;
-  position: relative;
+  top: 0; right: 0; bottom: 0; left: 0;
+  /*position: relative;*/
   height: auto;
+
+  position: absolute;
   /*padding: 0 20px;*/
+}
+
+/*
+.company-logo {
+  width: auto;
+  vertical-align:left;
+  float: left;
+  margin-left: auto;
+  margin-right: auto;
+}
+*/
+
+.company-logo {
+  vertical-align:left;
+  /*margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;*/
+  /*background: red;*/
+  float: left;
+  border-radius: 20px;
+}
+.job-info {
+  /*vertical-align:middle;
+    height:200px;
+    width:200px;*/
+    overflow: hidden;
+    /*background:green;*/
+}
+
+.left {
+    width:auto;
+    height:200px;
+    background:red;
+    overflow:hidden;
+}
+.right {
+    height:200px;
+    width:200px;
+    background:blue;
+    float:left;
+}
+.job-title {
+  /*vertical-align:middle;*/
+  font-size: 1.2em;
+/*  float: center;*/
+  float: left;
+  padding-left: 20px;
+}
+
+.date-range {
+  vertical-align:left;
+  text-align: center;
+  font-size: 1.2em;
+  float: right;
+}
+.description {
+  vertical-align: middle;
+  text-align: left;
+  /*margin-left: 10px;*/
+  padding-left: 20px;
+  font-size: 1.0em;
+}
+.myh1 {
+  font-size: 3em;
+  margin: 0.67em 0;
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+  font-weight: 'solid';
+}
+.myh2 {
+  font-size: 2.2em;
+  margin: 0.9em 0;
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+  font-weight: 'normal';
+}
+.myh3 {
+  font-size: 1.5em;
+  margin: 0.67em 0;
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+  font-weight: 'normal';
+}
+.myh4 {
+  font-size: 2.2em;
+  margin: 0.67em 0;
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+  font-weight: 'normal';
+  text-align: center;
+}
+
+.mypara {
+  font-size: 1.5em;
+}
+
+.project-title {
+  vertical-align:left;
+  font-size: 1.2em;
+  float: center;
+}
+.project-info {
+  /*vertical-align:middle;
+    height:200px;
+    width:200px;*/
+    overflow: hidden;
+    background:blue;
 }
